--- a/profile.html
+++ b/profile.html
@@ -1,3 +1,5 @@
 <html>
+<title>Profile page</title>
+<link rel="stylesheet" type="text/css" href="{{url_for('static',filename='style.css')}}"
 <h1>This is the profile page{{name}} </h1>
 </html>
